--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "node --watch index.js"
+    "dev": "node --watch index.js",
+    "test": "npm run lint && npm run test:syntax",
+    "test:syntax": "node --check index.js && node --check config.js && node --check commands/link.js && node --check commands/setup.js && node --check commands/stats.js && node --check commands/tracker.js && node --check services/leetifyApi.js && node --check services/matchTracker.js && node --check utils/guildConfigManager.js && node --check utils/userLinksManager.js && node --check utils/cs2RoastGenerator.js",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "keywords": [
     "discord",
@@ -18,8 +22,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.5",
     "discord.js": "^14.14.1",
-    "dotenv": "^16.4.1",
-    "axios": "^1.6.5"
+    "dotenv": "^16.4.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.57.1"
   }
 }
