--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,7 @@ LEETIFY_API_BASE_URL=https://api-public.cs-prod.leetify.com
 
 # Bot Settings
 PREFIX=!
+
+# Match Tracker Settings
+CHECK_INTERVAL_MINUTES=60  # How often to check for new matches (default: 60 minutes)
+USER_COOLDOWN_HOURS=3      # Cooldown period after detecting a match (default: 3 hours)
