Added ChatGPT roast generation

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,10 @@ CLIENT_ID=your_discord_client_id_here
 LEETIFY_API_KEY=your_leetify_api_key_here
 LEETIFY_API_BASE_URL=https://api-public.cs-prod.leetify.com
 
+# ChatGPT Configuration (Optional)
+CHATGPT_ENABLED=false                    # Set to 'true' to enable ChatGPT-generated roasts
+CHATGPT_API_KEY=your_openai_api_key     # OpenAI API key (can also use OPENAI_API_KEY)
+
 # Bot Settings
 PREFIX=!
 
