cooldown learning system, chatgpt prompt to be use a random stat

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,19 @@ CHATGPT_API_KEY=your_openai_api_key     # OpenAI API key (can also use OPENAI_AP
 # Bot Settings
 PREFIX=!
 
-# Match Tracker Settings
+# Match Tracker Settings (Legacy - kept for backward compatibility)
 CHECK_INTERVAL_MINUTES=60  # How often to check for new matches (default: 60 minutes)
 USER_COOLDOWN_HOURS=3      # Cooldown period after detecting a match (default: 3 hours)
+
+# Advanced Play-Time Learning System
+PLAY_LEARNING_ENABLED=true              # Enable intelligent play-time learning (default: true)
+MIN_MATCHES_FOR_LEARNING=3              # Start learning patterns after this many matches (default: 3)
+JUST_PLAYED_CHECK_INTERVAL=30           # Minutes between checks right after match detected (default: 30)
+JUST_PLAYED_DURATION=120                # Minutes to check frequently after match (default: 120 = 2 hours)
+ACTIVE_SESSION_CHECK_INTERVAL=30        # Minutes between checks during learned active hours (default: 30)
+MAX_ACTIVE_SESSION_CHECKS=4             # Max consecutive checks during active hours before cooldown (default: 4)
+INACTIVE_CHECK_INTERVAL=180             # Minutes between checks outside active hours (default: 180 = 3 hours)
+SOFT_RESET_DAYS=7                       # Days of inactivity before switching to daily checks (default: 7)
+SOFT_RESET_CHECK_INTERVAL=1440          # Minutes between checks for inactive players (default: 1440 = 24 hours)
+PATTERN_HISTORY_SIZE=30                 # Number of match detections to store for learning (default: 30)
+DAY_PATTERN_MIN_MATCHES=2               # Minimum matches on a day to use day-specific patterns (default: 2)
